[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/hud/inventory/Inventory.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=3]
action = "start_game"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 354.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="ScoreLifes" type="Label" parent="."]
anchor_right = 1.0
margin_right = -291.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 1 )
text = "Dodge the
Creeps"
align = 1

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 237.0
margin_top = 497.0
margin_right = 786.0
margin_bottom = 669.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 20
alignment = 1

[node name="NewGame" type="Button" parent="Buttons"]
margin_right = 549.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Novo Jogo"

[node name="ContinueGame" type="Button" parent="Buttons"]
margin_top = 104.0
margin_right = 549.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Continuar"

[node name="Inventory" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="handle_inventory" from="." to="." method="_on_HUD_handle_inventory"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/ContinueGame" to="." method="_on_ContinueGame_pressed"]
